Attempts to fix a connection tab bottom-border issue on mobile (#889)

--- a/pulter-site/styles/scss/components/_home.scss
+++ b/pulter-site/styles/scss/components/_home.scss
@@ -882,6 +882,10 @@
       &.active {
         z-index: 2;
         top: 1px;
+
+        @include breakpoint(mobile) {
+          top: 2px;
+        }
       }
 
       &:not(.active) {
